--- a/newportfolio/src/components/css/Navbar.css
+++ b/newportfolio/src/components/css/Navbar.css
@@ -1,83 +1,84 @@
-
-
-h2 {
-    color: white;
-    font-weight: 400;
-    display: inline-flex; 
-    align-items: center;  
-    
+.NavContainer {
+  padding: 0.4rem;
+  background-color: #333;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-  
-
-h2 span {
-    font-weight: bold;
-  }
-  
- 
-a {
-    color: white;
-    text-decoration: none;
-    margin-right: 1rem;
-    display: inline-flex; 
-    align-items: center;  
-
-  }
-  
- h2 .navbar {
-    padding: 0.4em;
-    background-color: #333;
-    align-items: center;
-    justify-content: space-between;
-  }
-
-
-  .links {
-    position: absolute;
-    top: -700px;
-    left: -2000px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    display: none; 
-  }
-  
-  @media(min-width: 768px) {
-    .burguer {
-      position: initial;
-      margin: 0;
-      a{
-        font-size: 1rem;
-        color: white;
-        display: inline;
-      }
-    }
-  }
-  
-.links a{
-    color: black;
-    font-size: 2rem;
+.NavContainer h2 {
+  color: white;
+  font-weight: 400;
+}
+.NavContainer h2 span {
+  font-weight: bold;
+}
+.NavContainer a {
+  color: white;
+  text-decoration: none;
+  margin-right: 1rem;
+}
+.NavContainer .links {
+  position: absolute;
+  top: -700px;
+  left: -2000px;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  transition: all 0.5s ease;
+}
+.NavContainer .links a {
+  color: white;
+  font-size: 2rem;
+  display: block;
+}
+@media (min-width: 768px) {
+  .NavContainer .links {
+    position: initial;
+    margin: 0;
     display: block;
+ }
+  .NavContainer .links a {
+    font-size: 1rem;
+    color: white;
+    display: inline;
+ }
 }
-
-.links.active{
-    width: 100%;
-    display: block;
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    top: 30%;
-    left: 0;
-    right: 0;
-    text-align: center;
-   
+.NavContainer .links.active {
+  width: 100%;
+  display: block;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  top: 30%;
+  left: 0;
+  right: 0;
+  text-align: center;
 }
-
-.links.ative a{
-        color: #333;
+.NavContainer .links.active a {
+  font-size: 2rem;
+  margin-top: 1rem;
+  color: white;
 }
-  
-@media(min-width: 768px){
-        .burguer {
-            display: none;
-          }
-    }
+@media (min-width: 768px) {
+  .NavContainer .burguer {
+    display: none;
+ }
+}
+.initial {
+  background-color: #222;
+  position: absolute;
+  top: -1000px;
+  left: -1000px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  transition: all 0.6s ease;
+}
+.initial.active {
+  border-radius: 0 0 80% 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
