--- a/newportfolio/src/components/css/Carrusel.css
+++ b/newportfolio/src/components/css/Carrusel.css
@@ -1,10 +1,10 @@
 .container-slider{
     max-width: 100%;
     height: 646px;
-    margin: 100px auto 0;
     position: relative;
     overflow: hidden;
     box-shadow: 0 10px 20px rgba(0,0,0 0.2);
+    z-index: 1;
     }
 
 
