--- a/newportfolio/src/components/css/Navbar.css
+++ b/newportfolio/src/components/css/Navbar.css
@@ -1,13 +1,14 @@
 .NavContainer {
-  padding: 0.4rem;
   background-color: #333;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
 }
 .NavContainer h2 {
   color: white;
   font-weight: 400;
+  padding: 10px;
 }
 .NavContainer h2 span {
   font-weight: bold;
@@ -34,7 +35,7 @@
 }
 @media (min-width: 768px) {
   .NavContainer .links {
-    position: initial;
+    /* position: initial; */
     margin: 0;
     display: block;
  }
@@ -54,17 +55,18 @@
   left: 0;
   right: 0;
   text-align: center;
+  z-index: 5;
 }
 .NavContainer .links.active a {
   font-size: 2rem;
   margin-top: 1rem;
   color: white;
 }
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
   .NavContainer .burguer {
     display: none;
  }
-}
+} */
 .initial {
   background-color: #222;
   position: absolute;
@@ -72,7 +74,7 @@
   left: -1000px;
   width: 100%;
   height: 100%;
-  z-index: -1;
+  z-index: 0;
   transition: all 0.6s ease;
 }
 .initial.active {
@@ -81,4 +83,5 @@
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 4;
 }
