--- a/newportfolio/src/components/css/Footer.css
+++ b/newportfolio/src/components/css/Footer.css
@@ -1,9 +1,9 @@
 p{
     padding: 15px;
     text-align: center;
-    color: white;
+    color: rgb(0, 0, 0);
 }
 a{
     text-decoration: none;
-    color: white;
+    color: rgb(0, 0, 0);
 }
