home ok skills cambiar, about colocar, contact ok, myworks cambiar

--- a/newportfolio/src/components/css/BurguerButton.css
+++ b/newportfolio/src/components/css/BurguerButton.css
@@ -6,9 +6,10 @@
   position: relative;
   cursor: pointer;
   display: inline-block;
+  scale: 70%;
 }
 .nav-icon-5 span{
-  background-color:#fff;
+  background-color:#000000;
   position: absolute;
   border-radius: 2px;
   transition: .3s cubic-bezier(.8, .5, .2, 1.4);
