--- a/newportfolio/src/components/css/Carrusel.css
+++ b/newportfolio/src/components/css/Carrusel.css
@@ -7,6 +7,15 @@
     z-index: 1;
     }
 
+ @media (max-width: 600px) { 
+        .container-slider{
+            max-width: 100%;
+            height: 323px;
+            overflow: hidden;
+            box-shadow: 0 10px 20px rgba(0,0,0 0.2);
+            z-index: 1;
+            }
+    }
 
 button{
     position: absolute;
@@ -26,5 +35,15 @@ button{
     top: 50%;
     left: 98%;
     transform: translateY(-60%);
-    
 }
+
+@media (max-width: 600px) { 
+    .prev {
+        position: relative;
+    }
+    .next {
+        position: relative;
+
+    }
+}
+
