--- a/newportfolio/src/components/css/Footer.css
+++ b/newportfolio/src/components/css/Footer.css
@@ -1,9 +1,11 @@
 p{
     padding: 15px;
+    
     text-align: center;
     color: rgb(0, 0, 0);
 }
 a{
     text-decoration: none;
-    color: rgb(0, 0, 0);
+    color: #33cccc;
+    font-weight:600
 }
