--- a/newportfolio/src/components/css/MyWorks.css
+++ b/newportfolio/src/components/css/MyWorks.css
@@ -36,4 +36,11 @@ body {
   }
   
   
-  
+ /*  .animate-opacity {
+    opacity: 0.5;
+    transition: opacity 0.5s ease;
+  }
+
+  body.is-scrolling-disabled {
+    overflow: hidden;
+  } */
