--- a/newportfolio/src/components/css/Navbar.css
+++ b/newportfolio/src/components/css/Navbar.css
@@ -1,20 +1,26 @@
 .NavContainer {
-  background-color: #333;
+  position: fixed;
+  top: 0;
+  z-index: 999;
+  background-color: #ffffffb8;
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  max-height: 50px;
 }
 .NavContainer h2 {
-  color: white;
+  color: rgb(0, 0, 0);
   font-weight: 400;
   padding: 10px;
+  font-size: 24px;
 }
+
 .NavContainer h2 span {
   font-weight: bold;
 }
 .NavContainer a {
-  color: white;
+ color: white;
   text-decoration: none;
   margin-right: 1rem;
 }
@@ -51,7 +57,7 @@
   position: absolute;
   margin-left: auto;
   margin-right: auto;
-  top: 30%;
+  top: 350%;
   left: 0;
   right: 0;
   text-align: center;
@@ -68,7 +74,7 @@
  }
 } */
 .initial {
-  background-color: #222;
+  background-color: #33ccccf1;
   position: absolute;
   top: -1000px;
   left: -1000px;
@@ -82,6 +88,6 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 1300%;
   z-index: 4;
 }
