--- a/newportfolio/src/components/css/Footer.css
+++ b/newportfolio/src/components/css/Footer.css
@@ -1,11 +1,20 @@
 p{
-    padding: 15px;
-    
     text-align: center;
     color: rgb(0, 0, 0);
 }
 a{
+   
     text-decoration: none;
     color: #33cccc;
     font-weight:600
+}
+
+.footer{
+    font-size: 13px;
+}
+
+
+.iconofooter{
+width: 3%;
+margin-bottom: -5px;
 }
