--- a/newportfolio/src/components/css/Modal.css
+++ b/newportfolio/src/components/css/Modal.css
@@ -1,4 +1,4 @@
-/* .modal {
+ .modal {
     position: fixed;
     top: 0;
     left: 0;
@@ -16,4 +16,4 @@
     border-radius: 0.5rem;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
   }
-   */
+  
