--- a/newportfolio/src/components/css/Works.css
+++ b/newportfolio/src/components/css/Works.css
@@ -1,74 +1,126 @@
-.container-slider{
-max-width: cover;
-height: 500px;
-margin: 100px auto 0;
-position: relative;
-overflow: hidden;
-box-shadow: 0 10px 20px rgba(0,0,0 0.2);
-}
 
-.container-slider img {
-    width: 100%;
-    height: auto;
-    display: block;
+  *{
+    margin:0;
+    padding:0;
   }
-
-
-@media screen and (min-width: 768px) {
-    .container-slider{
-        margin: 100px 10px 0;
-    }
-}
-
-.slider{
-width: 100%;
-height: 100%;
-position: absolute;
-opacity: 0;
-transition: opacity ease-in-out 0.4s;
-}
-
-.slider img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.slider-anim{
-opacity: 1;
-
-}
-
-.btn-slide{
-    /* width: 60px;
-    height: 60px; */
-   /*  border-radius: 50%;
-    background-color: #f1f1f1;
-    border: 1px solid rgba(34,34,34,0.287); */
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-}
-
-
-.btn-slide img{
-    width: 25px;
-    height: 25px;
-    pointer-events: none;
-}
-
-.prev {
-    top: 50%;
-    left: 6%;
-    transform: translateY(-60%);
-
-}
-
-.next {
-    top: 50%;
-    left: 90%;
-    transform: translateY(-60%);
+  #categories{
+    overflow:hidden;
+    width:90%;
+    margin:0 auto;
+  }
+  .clr:after{
+    content:"";
+    display:block;
+    clear:both;
+  }
+  #categories li{
+    position:relative;
+    list-style-type:none;
+    width:27.85714285714286%; 
+    padding-bottom: 32.16760145166612%;
+    float:left;
+    visibility:hidden;
+   
+    -webkit-transform: rotate(-60deg) skewY(30deg);
+    -ms-transform: rotate(-60deg) skewY(30deg);
+    transform: rotate(-60deg) skewY(30deg);
+  }
+  
+  #categories li *{
+    position:absolute;
+    visibility:visible;
+  }
+  #categories li > div{
+    width:100%;
+    height:100%;
+    text-align:center;
+    color:#fff;
+    overflow:hidden;
     
-}
+    -webkit-transform: skewY(-30deg) rotate(60deg);
+    -ms-transform: skewY(-30deg) rotate(60deg);
+    transform: skewY(-30deg) rotate(60deg);
+    
+      -webkit-backface-visibility:hidden;
+    
+  }
+  
+  #categories li img{
+    left:-100%; right:-100%;
+    width: auto; height:100%;
+    margin:0 auto;   
+  }
+  
+  #categories div h1, #categories div p{
+    width:90%;
+    padding:0 5%;
+    background-color:#008080; background-color: rgba(0, 128, 128, 0.8);
+    font-family: 'Raleway', sans-serif;
+    
+    -webkit-transition: top .2s ease-out, bottom .2s ease-out, .2s padding .2s ease-out;
+    -ms-transition: top .2s ease-out, bottom .2s ease-out, .2s padding .2s ease-out;
+    transition: top .2s ease-out, bottom .2s ease-out, .2s padding .2s ease-out;
+  }
+  #categories li h1{
+    bottom:110%;
+    font-style:italic;
+    font-weight:normal;
+    font-size:1.5em;
+    padding-top:100%;
+    padding-bottom:100%;
+  }
+  #categories li h1:after{
+      content:'';
+    display:block;
+    position:absolute;
+    bottom:-1px; left:45%;
+    width:10%;
+    text-align:center;
+    z-index:1;
+    border-bottom:2px solid #fff;
+  }
+  #categories li p{
+      padding-top:50%;
+      top:110%;
+      padding-bottom:50%;
+  }
+  
+  #categories li div:hover h1 {
+    bottom:50%;
+    padding-bottom:10%;
+  }
+  
+  #categories li div:hover p{
+    top:50%;
+    padding-top:10%;
+  }
+  #fork{
+    position:fixed;
+    top:0;
+    left:0;
+    color:#000;
+    text-decoration:none;
+    border:1px solid #000;
+    padding:.5em .7em;
+    margin:1%;
+    transition: color .5s;
+    overflow:hidden;
+  }
+  #fork:before {
+    content: '';
+    position: absolute;
+    top: 0; left: 0;
+    width: 130%;
+    height: 100%;
+    background: #000;
+    z-index: -1;
+    transform-origin:0 0 ;
+    transform:translateX(-100%) skewX(-45deg);
+    transition: transform .5s;
+  }
+  #fork:hover {
+    color: #fff;
+  }
+  #fork:hover:before {
+    transform: translateX(0) skewX(-45deg);
+  }
