--- a/newportfolio/src/components/css/About.css
+++ b/newportfolio/src/components/css/About.css
@@ -27,6 +27,7 @@
   h1, h3 {
     text-align: center;
     z-index: 2;
+    margin-top: 50px;
   }
   
 
@@ -64,6 +65,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: 50px;
+    margin-top: 250px;
   }
   
   .datos p {
@@ -73,3 +75,51 @@
   .iconodescarga{
     width: 10%;
   }
+
+
+
+
+  @media screen and (max-width: 768px) {
+
+    #About {
+    flex-direction: column;
+    align-items: center;
+    }
+    
+    .imagen {
+    margin-top: 35px;
+    width: 77%;
+    margin-right: 0;
+    margin-bottom: 2rem;
+    position: static;
+    margin-left: 230px;
+    }
+    
+    .container-texto {
+    width: 30%;
+    margin: -50px;
+    text-align: center;
+    }
+    
+    .iconodescarga {
+    width: 15%;
+    margin-left: 0;
+    margin-top: 10px;
+    }
+    .datos{
+      margin-top: 0;
+    }
+
+
+    }
+    .cuadradoazul {
+      position: relative;
+    width: 91px;
+    height: 14px;
+    background-color: #33cccc;
+    z-index: 5;
+    margin-left: 900px;
+
+}
+  
+    
