--- a/newportfolio/src/components/css/Carrusel.css
+++ b/newportfolio/src/components/css/Carrusel.css
@@ -6,8 +6,11 @@
     box-shadow: 0 10px 20px rgba(0,0,0 0.2);
     z-index: 1;
     }
+  .contanier img{
+    width: 100%;
+  }
 
- @media (max-width: 600px) { 
+ @media screen and (max-width: 678px) { 
         .container-slider{
             max-width: 100%;
             height: 323px;
@@ -27,13 +30,16 @@ button{
 
 
 .next {
-    position: absolute; 
-    right: 0; 
+    position: relative;
+    right: -1200px;
+    margin-top: -250px;
+    z-index: 6;
   }
   
   .prev {
     position: absolute; 
     left: 0; 
+    margin-top: -250px;
   }
 
   .next, .prev {
